--- a/homeworks/week6/hw1/index.html
+++ b/homeworks/week6/hw1/index.html
@@ -53,6 +53,32 @@
       </div>
     </section>
   </div>
+  <div class="review__wrapper">
+    <h2 class="review__title">吃過都說好</h2>
+    <div class="review__reviewers">
+      <div class="review__reviewer1">
+        <div class="review__reviewer1-profile">
+          <div class="review__reviewer1-photo"></div>
+          <p class="review__reviewer3-name">國父桑</p>
+        </div>
+        <p class="review__reviewer1-comment">我一生疲於建國，去過日本，去過歐洲，卻從未到過台北101，也從來沒有吃過這麼好吃的東西...今天在時空旅行者的幫助下我終於吃到了...此生再無遺憾 QAQ!!</p>
+      </div>
+      <div class="review__reviewer2">
+        <div class="review__reviewer2-profile">
+          <div class="review__reviewer2-photo"></div>
+          <p class="review__reviewer2-name">可達鴨</p>
+        </div>
+        <p class="review__reviewer2-comment">三雙鞋等於30，兩個人加一雙鞋等於20，一雙冰淇淋加一雙冰淇淋加一個人等於13，那$#%$#%^%$^##$%等於多少...唉，大概咬一口就知道了!!!</p>
+      </div>
+      <div class="review__reviewer3">
+        <div class="review__reviewer3-profile">
+          <div class="review__reviewer3-photo"></div>
+          <p class="review__reviewer3-name">旅かえる旅行青蛙</p>
+        </div>
+        <p class="review__reviewer3-comment">自從呱呱呱呱呱以後，我呱呱呱呱呱，非常感謝呱呱呱呱呱，下次呱呱呱呱呱我呱呱呱呱呱，一定呱呱呱呱呱!!!</p>
+      </div>
+    </div>
+  </div>
   <div class="map__wrapper">
     <h2 class="map__title">我們在哪裡</h2>
     <iframe class="map__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.002890183707!2d121.5623502150063!3d25.03397598397251!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abb6da9c9e1f%3A0x1206bcf082fd10a6!2zMTEw5Y-w5YyX5biC5L-h576p5Y2A5L-h576p6Lev5LqU5q61N-iZnw!5e0!3m2!1szh-TW!2stw!4v1594738886288!5m2!1szh-TW!2stw" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
