--- a/homeworks/week7/hw1/index.html
+++ b/homeworks/week7/hw1/index.html
@@ -34,8 +34,13 @@
         </div>
         <div class="form__questions--programs">
           <h2>報名類型<span> *</span></h2>
-          <section><input type="radio" name="program" id="in-bed" required/><label for="in-bed"> 躺在床上用想像力實作</label></section>
-          <section><input type="radio" name="program" id="on-ground" required/><label for="on-ground"> 趴在地上滑手機找現成的</label></section>
+          <label for="in-bed">
+            <input type="radio" name="program" id="in-bed" value="躺在床上用想像力實作" required/> 躺在床上用想像力實作
+          </label>
+          <br>
+          <label for="on-ground">
+            <input type="radio" name="program" id="on-ground" value="趴在地上滑手機找現成的" required/> 趴在地上滑手機找現成的
+          </label>
         </div>
         <div class="form__questions--acquire">
           <h2>怎麼知道這個活動的<span> *</span></h2>
@@ -43,8 +48,8 @@
         </div>
       </section>
       <div class="form__questions--other">
-        <h2>其他  </h2>
-        <p>對活動的一些建議 </p>
+        <h2>其他</h2>
+        <p>對活動的一些建議</p>
         <input type="text" name="other" placeholder="您的回答" />
       </div>
       <div class="form__questions--submit">
