--- a/homeworks/week7/hw2/index.html
+++ b/homeworks/week7/hw2/index.html
@@ -42,7 +42,7 @@
       <div class="FAQ__content--question">
         <span>Q4:</span> 如何查詢目前訂單的處理狀況？
       </div>
-      <p class="FAQ__content--answer">可以從<a href="">訂單查詢</a>查看訂單喔～</p>
+      <p class="FAQ__content--answer">可以從「<a href="">訂單查詢</a>」查看訂單喔～</p>
     </div>
     <div class="FAQ__content">
       <div class="FAQ__content--question">
