hw1 revised - reconstructuring and adding more validation check

--- a/homeworks/week7/hw1/index.html
+++ b/homeworks/week7/hw1/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="form__questions--cellphone">
           <h2>手機號碼<span> *</span></h2>
-          <input type="tel" name="cellphone" placeholder="您的手機號碼" required/>
+          <input type="tel" name="cellphone" pattern="^09[0-9]{8}" maxlength="10" placeholder="您的手機號碼" required/>
         </div>
         <div class="form__questions--programs">
           <h2>報名類型<span> *</span></h2>
