--- a/homeworks/week8/hw1/index.html
+++ b/homeworks/week8/hw1/index.html
@@ -22,23 +22,23 @@
     <h2 class="lottery__title">抽個大獎！</h2>
     <div class="lottery__prize start show">
       <div class="lottery__prize--content">快來試試手氣吧！！</div>
-      <div class="lottery__btn">我要抽獎</div>
+      <div class="lottery__btn pick">我要抽獎</div>
     </div>
     <div class="lottery__prize first hide">
       <div class="lottery__prize--content">恭喜你中頭獎了！日本東京來回雙人遊！</div>
-      <div class="lottery__btn">我要抽獎</div>
+      <div class="lottery__btn back">再抽一次</div>
     </div>
     <div class="lottery__prize second hide">
       <div class="lottery__prize--content">二獎！90 吋電視一台！</div>
-      <div class="lottery__btn">我要抽獎</div>
+      <div class="lottery__btn back">再抽一次</div>
     </div>
     <div class="lottery__prize third hide">
       <div class="lottery__prize--content">恭喜你抽中三獎：知名 YouTuber 簽名握手會入場券一張，bang！</div>
-      <div class="lottery__btn">我要抽獎</div>
+      <div class="lottery__btn back">再抽一次</div>
     </div>
     <div class="lottery__prize none hide">
       <div class="lottery__prize--content">銘謝惠顧</div>
-      <div class="lottery__btn">我要抽獎</div>
+      <div class="lottery__btn back">再抽一次</div>
     </div>
   </div>
   <footer class="footer">
