--- a/homeworks/week7/challenge/index.html
+++ b/homeworks/week7/challenge/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
   <section class="sliders">
-    <div class="sliders__no1">
+    <div class="sliders__no1 show">
       <h1 class="sliders__no1--title">1. High Sierra</h1>
     </div>
-    <div class="sliders__no2">
+    <div class="sliders__no2 next">
       <h1 class="sliders__no2--title">2. Mojave Day</h1>
     </div>
-    <div class="sliders__no3">
+    <div class="sliders__no3 next">
       <h1 class="sliders__no3--title">3. Mojave Night</h1>
     </div>
-    <div class="sliders__no4">
+    <div class="sliders__no4 previous">
       <h1 class="sliders__no4--title">4. Sierra</h1>
     </div>
   </section>
@@ -27,7 +27,7 @@
     </div>
     <div class="controls__bwBtn">
       <div class="controls__bwBtn--arrow"></div>
-    </div>ß
+    </div>
   </section>
   <script src="index.js"></script>
 </body>
