--- a/homeworks/week8/hw1/index.html
+++ b/homeworks/week8/hw1/index.html
@@ -21,8 +21,39 @@
   <div class="lottery">
     <h2 class="lottery__title">抽個大獎！</h2>
     <div class="lottery__prize start show">
-      <div class="lottery__prize--content">快來試試手氣吧！！</div>
-      <div class="lottery__btn pick">我要抽獎</div>
+      <div class="lottery__prize--content">
+        <div class="lottery__detail title">
+          2020 夏日輕盈特賞！ 抽獎活動辦法
+        </div>
+        <div class="lottery__detail duration">
+          <div class="lottery__detail__item">
+            活動期間：
+          </div>
+          <div class="lottery__detail__content">
+            2020/06/01~2020/07/01
+          </div>
+        </div>
+        <div class="lottery__detail qualification">
+          <div class="lottery__detail__item">
+            活動說明：
+          </div>
+          <div class="lottery__detail__content">
+            今天老闆佛心來著決定給大家發獎勵，有看有機會，沒看只能幫QQ！
+            只要在店內消費滿1000000元即有機會獲得 - 頭獎日本東京來回雙人遊！
+          </div>
+        </div>
+        <div class="lottery__detail prizes">
+          <div class="lottery__detail__item">
+            獎&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;品：
+          </div>
+          <div class="lottery__detail__content">
+            ❤ 頭獎一名：日本東京來回雙人遊(市價14990元)<br>
+❤ 貳獎三名：90 吋電視一台(市價5990元)<br>
+❤ 參獎十名：知名 YouTuber 簽名握手會入場券一張(市價1500元)
+          </div>
+        </div>
+        <div class="lottery__btn pick">我要抽獎</div>
+      </div>
     </div>
     <div class="lottery__prize first hide">
       <div class="lottery__prize--content">恭喜你中頭獎了！日本東京來回雙人遊！</div>
@@ -66,6 +97,5 @@
     </div>
   </footer>
 <script src="index.js"></script>
-<script src="calProbability__browser.js"></script>
 </body>
 </html>
