--- a/homeworks/week13/hw3/index.html
+++ b/homeworks/week13/hw3/index.html
@@ -5,15 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>twitch wanna watch</title>
   <link rel="stylesheet" href="index.css" />
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav class="navbar">
-      <div class="navbar__title">Or you want to checkout
+      <div class="navbar__title">
         <div class="navbar__search">
-          <form>
-          <input type="text" class="navbar__search__text" placeholder="full name or try your luck" />
-          <button class="navbar__search__searchBtn">Search</button>
-        </form>
+
         </div>
       </div>
       <ul class="navbar__topGames">
